force-app/main/default/objects/Component_Relationship__c/Component_Relationship__c.object-meta.xml
<CustomObject>
    <label>Component Relationship</label>
    <nameField>
        <label>Audio Component Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>