force-app/main/default/objects/Component_Relationship__c/fields/Accessorized_Component__c.field-meta.xml
<CustomField>
    <fullName>Accessorized_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessorized Component</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Accessory Relationships</relationshipLabel>
    <relationshipName>Accessory_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>