force-app/main/default/objects/Component_Relationship__c/fields/Amp_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Amp_Configuration__c</fullName>
    <label>Amp Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stereo Full Range</fullName>
            </value>
            <value>
                <fullName>Stereo Biwire</fullName>
            </value>
            <value>
                <fullName>Mono Left</fullName>
            </value>
            <value>
                <fullName>Mono Left Biwire</fullName>
            </value>
            <value>
                <fullName>Mono Right</fullName>
            </value>
            <value>
                <fullName>Mono Right Biwire</fullName>
            </value>
            <value>
                <fullName>Mono Left+Right</fullName>
            </value>
            <value>
                <fullName>Mono Left+Right Biwire</fullName>
            </value>
            <value>
                <fullName>Biamp Treble</fullName>
            </value>
            <value>
                <fullName>Biamp Bass</fullName>
            </value>
            <value>
                <fullName>Biamp Left</fullName>
            </value>
            <value>
                <fullName>Biamp Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>