force-app/main/default/objects/Component_Relationship__c/fields/Amp_Taps__c.field-meta.xml
<CustomField>
    <fullName>Amp_Taps__c</fullName>
    <label>Amp Taps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>2 ohms</fullName>
            </value>
            <value>
                <fullName>4 ohms</fullName>
            </value>
            <value>
                <fullName>8 ohms</fullName>
            </value>
            <value>
                <fullName>16 ohms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>