force-app/main/default/objects/Component_Relationship__c/fields/Armboard__c.field-meta.xml
<CustomField>
    <fullName>Armboard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Armboard</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Armboard</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Table-Tonearm Relationships</relationshipLabel>
    <relationshipName>Table_Tonearm_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>