force-app/main/default/objects/Component_Relationship__c/fields/Audio_System__c.field-meta.xml
<CustomField>
    <fullName>Audio_System__c</fullName>
    <label>Audio System</label>
    <referenceTo>Audio_System__c</referenceTo>
    <relationshipLabel>Component Relationships</relationshipLabel>
    <relationshipName>Component_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>