force-app/main/default/objects/Component_Relationship__c/fields/Dest__c.field-meta.xml
<CustomField>
    <fullName>Dest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Component</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Destination To</relationshipLabel>
    <relationshipName>Destination_To</relationshipName>
    <type>Lookup</type>
</CustomField>