force-app/main/default/objects/Component_Relationship__c/fields/Downstream__c.field-meta.xml
<CustomField>
    <fullName>Downstream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downstream</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Preamplifier, Amplifier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Downstreams</relationshipLabel>
    <relationshipName>Downstreams</relationshipName>
    <type>Lookup</type>
</CustomField>