force-app/main/default/objects/Component_Relationship__c/fields/Interconnect__c.field-meta.xml
<CustomField>
    <fullName>Interconnect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interconnect</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Interconnects</relationshipLabel>
    <relationshipName>Interconnects</relationshipName>
    <type>Lookup</type>
</CustomField>