force-app/main/default/objects/Component_Relationship__c/fields/Intermediate__c.field-meta.xml
<CustomField>
    <fullName>Intermediate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediate</label>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Intermediates</relationshipLabel>
    <relationshipName>Intermediates</relationshipName>
    <type>Lookup</type>
</CustomField>