force-app/main/default/objects/Component_Relationship__c/fields/Phono_Gain__c.field-meta.xml
<CustomField>
    <fullName>Phono_Gain__c</fullName>
    <label>Phono Gain</label>
    <length>128</length>
    <type>Text</type>
</CustomField>