force-app/main/default/objects/Component_Relationship__c/fields/Phono_Input__c.field-meta.xml
<CustomField>
    <fullName>Phono_Input__c</fullName>
    <label>Phono Input</label>
    <length>128</length>
    <type>Text</type>
</CustomField>