force-app/main/default/objects/Component_Relationship__c/fields/Phono_Loading__c.field-meta.xml
<CustomField>
    <fullName>Phono_Loading__c</fullName>
    <label>Phono Loading</label>
    <length>128</length>
    <type>Text</type>
</CustomField>