force-app/main/default/objects/Component_Relationship__c/fields/Phono_Stage__c.field-meta.xml
<CustomField>
    <fullName>Phono_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phono Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Phono Stage</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Cartridge-SUT Relationships</relationshipLabel>
    <relationshipName>Cartridge_SUT_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>