force-app/main/default/objects/Component_Relationship__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>The ranking of this alternative when there are multiple relationships of this type in a system. Lower is better (1 is best).</description>
    <inlineHelpText>The ranking of this alternative when there are multiple relationships of this type in a system. Lower is better (1 is best).</inlineHelpText>
    <label>Ranking</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>