force-app/main/default/objects/Component_Relationship__c/fields/Src__c.field-meta.xml
<CustomField>
    <fullName>Src__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Component</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Source To</relationshipLabel>
    <relationshipName>Source_To</relationshipName>
    <type>Lookup</type>
</CustomField>