force-app/main/default/objects/Component_Relationship__c/fields/SUT_Cable__c.field-meta.xml
<CustomField>
    <fullName>SUT_Cable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUT Cable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>SUT-Phono Relationships</relationshipLabel>
    <relationshipName>SUT_Phono_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>