force-app/main/default/objects/Component_Relationship__c/fields/SUT_Cable_Ground__c.field-meta.xml
<CustomField>
    <fullName>SUT_Cable_Ground__c</fullName>
    <label>SUT Cable Ground</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Ground</fullName>
            </value>
            <value>
                <fullName>Float Both</fullName>
            </value>
            <value>
                <fullName>Ground Phono</fullName>
            </value>
            <value>
                <fullName>Ground SUT</fullName>
            </value>
            <value>
                <fullName>Ground Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>