force-app/main/default/objects/Component_Relationship__c/fields/SUT_Tap__c.field-meta.xml
<CustomField>
    <fullName>SUT_Tap__c</fullName>
    <label>SUT Tap</label>
    <length>128</length>
    <type>Text</type>
</CustomField>