force-app/main/default/objects/Component_Relationship__c/fields/Table_Cartridge__c.field-meta.xml
<CustomField>
    <fullName>Table_Cartridge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table-Cartridge</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Component_Relationship__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Component_Relationship__c</referenceTo>
    <relationshipLabel>Cartridge-Phono Relationships</relationshipLabel>
    <relationshipName>Cartridge_Phono_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>