force-app/main/default/objects/Component_Relationship__c/fields/Tonearm_Antiskate__c.field-meta.xml
<CustomField>
    <fullName>Tonearm_Antiskate__c</fullName>
    <label>Tonearm Antiskate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>