force-app/main/default/objects/Component_Relationship__c/fields/Tonearm_Azimuth__c.field-meta.xml
<CustomField>
    <fullName>Tonearm_Azimuth__c</fullName>
    <label>Tonearm Azimuth</label>
    <length>128</length>
    <type>Text</type>
</CustomField>