force-app/main/default/objects/Component_Relationship__c/fields/Tonearm_Cable_Ground__c.field-meta.xml
<CustomField>
    <fullName>Tonearm_Cable_Ground__c</fullName>
    <label>Tonearm Cable Ground</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phono Stage</fullName>
            </value>
            <value>
                <fullName>SUT</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>No Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>