force-app/main/default/objects/Component_Relationship__c/fields/Tonearm_VTA__c.field-meta.xml
<CustomField>
    <fullName>Tonearm_VTA__c</fullName>
    <label>Tonearm VTA</label>
    <length>128</length>
    <type>Text</type>
</CustomField>