force-app/main/default/objects/Component_Relationship__c/fields/Tonearm_VTF__c.field-meta.xml
<CustomField>
    <fullName>Tonearm_VTF__c</fullName>
    <label>Tonearm VTF</label>
    <length>128</length>
    <type>Text</type>
</CustomField>