force-app/main/default/objects/Component_Relationship__c/fields/Treble_Cable__c.field-meta.xml
<CustomField>
    <fullName>Treble_Cable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treble Cable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Speaker Cable</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Treble Cable To</relationshipLabel>
    <relationshipName>Treble_Cable_To</relationshipName>
    <type>Lookup</type>
</CustomField>