force-app/main/default/objects/Component_Relationship__c/fields/Tube_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Tube_Quantity__c</fullName>
    <label>Tube Quantity</label>
    <length>128</length>
    <type>Text</type>
</CustomField>