force-app/main/default/objects/Component_Relationship__c/fields/Tube_Selection__c.field-meta.xml
<CustomField>
    <fullName>Tube_Selection__c</fullName>
    <label>Tube Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>