force-app/main/default/objects/Component_Relationship__c/recordTypes/Accessory_Component.recordType-meta.xml
<RecordType>
    <fullName>Accessory_Component</fullName>
    <active>true</active>
    <label>Accessory-Component</label>
</RecordType>