force-app/main/default/objects/Component_Relationship__c/recordTypes/Amp_Speaker.recordType-meta.xml
<RecordType>
    <fullName>Amp_Speaker</fullName>
    <active>true</active>
    <label>Amp-Speaker</label>
</RecordType>