force-app/main/default/objects/Component_Relationship__c/recordTypes/Cartridge_Phono.recordType-meta.xml
<RecordType>
    <fullName>Cartridge_Phono</fullName>
    <active>true</active>
    <label>Cartridge-Phono</label>
</RecordType>