force-app/main/default/objects/Component_Relationship__c/recordTypes/Component_Component.recordType-meta.xml
<RecordType>
    <fullName>Component_Component</fullName>
    <active>true</active>
    <label>Component-Component</label>
</RecordType>