force-app/main/default/objects/Component_Relationship__c/recordTypes/Table_Cartridge.recordType-meta.xml
<RecordType>
    <fullName>Table_Cartridge</fullName>
    <active>true</active>
    <label>Table-Cartridge</label>
</RecordType>