force-app/main/default/objects/Component_Relationship__c/recordTypes/Tube_Component.recordType-meta.xml
<RecordType>
    <fullName>Tube_Component</fullName>
    <active>true</active>
    <label>Tube-Component</label>
</RecordType>